fixed path issue with response.json